test/corpus/Tokens.txt
===
Comments
===

% comment %{

%{
comment % } %{
%}

%{ comment %} % comment

%
%

---

(lilypond_program
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))


===
Symbols and escaped words
===

\version "1"
\include "file.ily"
\language english

---

(lilypond_program
  (escaped_word)
  (string
    (string_fragment))
  (escaped_word)
  (string
    (string_fragment))
  (escaped_word)
  (symbol))


===
Expression components
===

0
12
3/4
5.6
' , ? ! . - ^ _ > + ~ ( ) \( \) [ ] : / = |
\< \> \!
\78

---

(lilypond_program
  (duration)
  (duration)
  (fraction)
  (decimal_number)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (punctuation)
  (hairpin)
  (hairpin)
  (hairpin)
  (instrument_string_number))


===
Strings
===

""
"%x\n%y"
"lily\npond\""

---

(lilypond_program
  (string)
  (string
    (string_fragment)
    (escape_sequence)
    (string_fragment))
  (string
    (string_fragment)
    (escape_sequence)
    (string_fragment)
    (escape_sequence)))


===
Durations
===

c1 2 4 8 16 32 64. 128

---

(lilypond_program
  (note
   (duration))
  (duration)
  (duration)
  (duration)
  (duration)
  (duration)
  (duration)
  (duration))


===
Ties and scaled durations
===

c2*2/3 c~c c2 <c e g>2~ <c e g>4

---

(lilypond_program
  (note
    (duration
      (duration_scale)))
  (note)
  (punctuation)
  (note)
  (note
   (duration))
  (chord
   (note)
   (note)
   (note)
   (duration))
  (punctuation)
  (chord
   (note)
   (note)
   (note)
   (duration)))


===
Rests and beams
===

r8 c[ r c] s2 | R1

---

(lilypond_program
  (rest
   (duration))
  (note)
  (punctuation)
  (rest)
  (note)
  (punctuation)
  (rest
    (duration))
  (punctuation)
  (rest
    (duration)))


===
Articulations
===

c8-^ c-+ c-- c-! c-> c-. c4-_

---

(lilypond_program
  (note
   (duration))
  (punctuation)
  (punctuation)
  (note)
  (punctuation)
  (punctuation)
  (note)
  (punctuation)
  (punctuation)
  (note)
  (punctuation)
  (punctuation)
  (note)
  (punctuation)
  (punctuation)
  (note)
  (punctuation)
  (punctuation)
  (note
   (duration))
  (punctuation)
  (punctuation))


===
Dynamics
===

c\< c\! c\> c\!

---

(lilypond_program
  (note)
  (hairpin)
  (note)
  (hairpin)
  (note)
  (hairpin)
  (note)
  (hairpin))


===
Chords
===

<c e-> g\1>2q

---

(lilypond_program
  (chord
    (note)
    (note)
    (punctuation)
    (punctuation)
    (note)
    (instrument_string_number)
    (duration))
  (symbol))


===
Parallel music
===

<< e1 \\ c >>

---

(lilypond_program
  (parallel_music
    (note
      (duration))
    (parallel_music_separator)
    (note)))


===
Slurs
===

c8( c) c\( c\) c\=1( c\=1) c\=%{%}"label"\( c\="label"%{%}\)

---

(lilypond_program
  (note
    (duration))
  (punctuation)
  (note)
  (punctuation)
  (note)
  (punctuation)
  (note)
  (punctuation)
  (note)
  (escaped_word)
  (duration)
  (punctuation)
  (note)
  (escaped_word)
  (duration)
  (punctuation)
  (note)
  (escaped_word)
  (comment)
  (string
    (string_fragment))
  (punctuation)
  (note)
  (escaped_word)
  (string
    (string_fragment))
  (comment)
  (punctuation))


===
Text-only markup
===

c4^"up" c_"down" c2-"default"

---

(lilypond_program
  (note
    (duration))
  (punctuation)
  (string
    (string_fragment))
  (note)
  (punctuation)
  (string
    (string_fragment))
  (note
    (duration))
  (punctuation)
  (string
    (string_fragment)))


===
Octave shifts
===

ces'!4 ces,? c='2

---

(lilypond_program
  (note)
  (punctuation)
  (duration)
  (note)
  (punctuation)
  (note)
  (punctuation)
  (punctuation)
  (duration))


===
Ligatures
===

\[ c2 c \]

---

(lilypond_program
  (ligature)
  (note
    (duration))
  (note)
  (ligature))


===
Embedded Scheme
===

#(begin
;

#|
comment
|#

#|
nested
#|
comment
|#
|#
)

---

(lilypond_program
  (embedded_scheme
    (embedded_scheme_prefix)
    (embedded_scheme_text
      (scheme_list
        (scheme_symbol)
        (scheme_comment)
        (scheme_comment)
        (scheme_comment)))))


===
Embedded Scheme and LilyPond
===

#(define foo #{
  \relative {
    #(make-sequential-music
      (map (lambda (_) #{ s1 #})
           (iota 1)))
  }
#})


---

(lilypond_program
  (embedded_scheme
    (embedded_scheme_prefix)
    (embedded_scheme_text
      (scheme_list
        (scheme_symbol)
        (scheme_symbol)
        (scheme_embedded_lilypond
          (escaped_word)
          (expression_block
            (embedded_scheme
              (embedded_scheme_prefix)
              (embedded_scheme_text
                (scheme_list
                  (scheme_symbol)
                  (scheme_list
                    (scheme_symbol)
                    (scheme_list
                      (scheme_symbol)
                      (scheme_list
                        (scheme_symbol))
                      (scheme_embedded_lilypond
                        (rest
                          (duration))))
                    (scheme_list
                      (scheme_symbol)
                      (scheme_number))))))))))))
